--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Service</title>
+    <title>hello labcom - Frontend Service</title>
 </head>
 <body>
     <div id="data-container">
+        <p>This is data from the db:</p>
         <!-- Data fetched from backend will be displayed here -->
     </div>
 
